:snowflake:<feat> get user by sid
